@@ -1,6 +1,14 @@
 [2018-08-06]
-- Fixed Medal of Honor (Thief) [Loa]
-- Fixed Brave Gladiator Blade description [Loa]
+- BG Item Proofreads [Loa]
+	Medal of Honor (Thief)
+	Brave Gladiator Blade
+	Brave Battle Fist
+	Brave Battle Strategy Book
+	Assaulter Lance
+	Speedy Recovery Wand
+	Valorous Assassin Damascus
+	Valorous Battle Fist
+	Valorous Gladiator Blade
 
 [2018-08-05]
 - Added Angra Mantis Card [Loa]
